[package]
name = "hello-ci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#lurk = { git = "https://github.com/lurk-lab/lurk-rs", branch = "master" }
pasta-msm = { git = "https://github.com/lurk-lab/pasta-msm.git", branch = "cuda-sm-86", features = ["portable"] }

[features]
#gpu = ["lurk/cuda", "lurk/opencl"]

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "fib"
harness = false

[patch.crates-io]
pasta-msm = { git = "https://github.com/lurk-lab/pasta-msm.git", branch = "cuda-sm-86" }
#nova-snark = { git = "https://github.com/lurk-lab/Nova.git" }
#pasta_curves = { git = "https://github.com/lurk-lab/pasta_curves.git" }