[package]
name = "hello-ci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#lurk = { git = "https://github.com/lurk-lab/lurk-rs.git" }

[features]
#cuda = ["lurk/cuda"]
#opencl = ["lurk/opencl"]

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "fib"
harness = false
